--- a/TaxiService/WebContent/Style/Main.css
+++ b/TaxiService/WebContent/Style/Main.css
@@ -24,12 +24,12 @@ input{
 	margin-bottom: 5px;
 }
 
-#loginSpan{
+#loginSpan, #registerUserSpan{
 	font-style: sans-serif;
 	text-align: center;
 }
 
-#loginTable{
+#loginTable, #registerTable{
 	margin: 0 auto;
 }
 
@@ -38,4 +38,15 @@ input{
 	font-family: sans-serif;
 	font-size: 150%;
 	font-style: bold;
+}
+
+#registerSpan, #existingUserSpan{
+	color: purple;
+	text-decoration: underline;
+	text-align: center;
+}
+
+#errorDiv{
+	color: red;
+	padding: 10px;
 }
